# bftdoc

./: CMakeLists.txt  README.md  README.txt  bftclient.cpp  bftclient.h  bftdoc.cpp  bftpeer.cpp  bftpeer.h  bftpeerwindow.cpp  bftpeerwindow.h  build.sh  buildrun.sh  config.h  datatypes.h  util.h
